fixed scrollbar sidebar

--- a/src/cone/app/browser/static/dark.css
+++ b/src/cone/app/browser/static/dark.css
@@ -50,7 +50,10 @@ body {
   background-color: #5bc0de;
   color: white;
 }
-#mainmenu li:hover > a {
+#mainmenu li.active i {
+  color: #5bc0de;
+}
+#mainmenu li:hover > * {
   color: #dfe8f0;
   transition: 0.25s;
 }
@@ -161,6 +164,9 @@ body {
 }
 #sidebar_left #sidebar-toggle-btn {
   color: rgba(230, 230, 235, 0.3);
+}
+#sidebar_left #sidebar_footer {
+  background-color: #38383D;
 }
 #sidebar_left .sidebar-heading {
   color: #E6E6EB;
